--- a/src/stylesheet/Card.css
+++ b/src/stylesheet/Card.css
@@ -30,6 +30,7 @@
 
 .circle {
     padding: 0 4px;
+    background-color: #131218 !important;
 }
 
 .img-languajes {
@@ -50,6 +51,7 @@
     height: 10px;
     padding: 1px;
     border-radius: 50%;
+    background-color: #131218;
 }
 
 .red {
