--- a/src/stylesheet/Presentation.css
+++ b/src/stylesheet/Presentation.css
@@ -9,6 +9,7 @@
 }
 
 .imagen-testimonio {
+    /* font-size: 1.4em; */
     height: 100%;
     width: auto;
 }
@@ -17,15 +18,14 @@
     width: 100%;
     font-size: 18px;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+        'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     line-height: 1.5rem;
 }
 
 .nombre-testimonio {
-    font-size: 1.3rem;
+    font-size: 2rem;
     margin-bottom: 30px;
 }
 
@@ -35,6 +35,6 @@
 }
 
 .texto-testimonio {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     text-align: center;
 }
