--- a/src/stylesheet/Page.css
+++ b/src/stylesheet/Page.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     background-color: #131218;
+    background-image: url('../img/background/earth.jpg');
     margin-bottom: 50px;
 }
 
