--- a/src/stylesheet/Page.css
+++ b/src/stylesheet/Page.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #131218;
+    /* background-color: #131218; */
     background-image: url('../img/background/earth.jpg');
     margin-bottom: 50px;
 }
