--- a/src/stylesheet/Page.css
+++ b/src/stylesheet/Page.css
@@ -8,6 +8,12 @@
     margin-bottom: 50px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+    font-size: bold ;
+}
+
 .mainContainerCards {
     width: 100%;
     display: flex;
