--- a/src/stylesheet/Presentation.css
+++ b/src/stylesheet/Presentation.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 5px 5px 5px 5px black;
+    box-shadow: 3px 3px 15px 6px black;
     color: #f4f5f6;
 }
 
@@ -18,8 +18,9 @@
     width: 100%;
     font-size: 18px;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-        'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
     font-weight: 400;
     line-height: 1.5rem;
 }
