--- a/src/stylesheet/Page.css
+++ b/src/stylesheet/Page.css
@@ -1,5 +1,5 @@
 .containerPresentation {
-    height: 500px;
+    height: 650px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,6 +14,11 @@
     justify-content: center;
     align-content: center;
     margin-bottom: 50px;
+}
+
+.cita {
+    margin-top: 30px;
+    color: white;
 }
 
 h1 {
