--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,5 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
         sans-serif;
-    background-color: #17161C;
-
+    background-color: #17161c;
 }
