--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,5 @@
         Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
         sans-serif;
     background-color: #17161c;
+    box-sizing: border-box;
 }
