--- a/src/stylesheet/Page.css
+++ b/src/stylesheet/Page.css
@@ -1,25 +1,26 @@
+.mainContainerStart {
+    width: 100%;
+    height: 100%;
+}
+
+.containerNav {
+    width: 100%;
+    height: 60px;
+}
+
+.containerVideo {
+    width: 100%;
+    height: 650px;
+}
+
 .containerPresentation {
     height: 650px;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: #131218; */
-    background-image: url('../img/background/earth.jpg');
-    /* background: transparent; */
+    flex-direction: column;
     margin-bottom: 50px;
 }
-
-/* #background-video {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
-} */
 
 .mainContainerCards {
     width: 100%;
@@ -27,6 +28,7 @@
     justify-content: center;
     align-content: center;
     margin-bottom: 50px;
+    /* position: absolute; */
 }
 
 .cita {
@@ -52,6 +54,7 @@ h1 {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    /* position: absolute; */
 }
 
 .containerCards {
@@ -63,6 +66,7 @@ h1 {
     grid-template-areas:
         '. . .'
         '. . .';
+    /* position: absolute; */
 }
 
 .containerPortfolio {
@@ -75,6 +79,7 @@ h1 {
     grid-template-areas: '. . .';
     margin-bottom: 50px;
     justify-items: center;
+    /* position: absolute; */
 }
 
 .contact {
