--- a/src/stylesheet/Portfolio.css
+++ b/src/stylesheet/Portfolio.css
@@ -1,4 +1,6 @@
 .mainContainerPortfolio {
+    margin-left: 40px;
+    margin-right: 40px;
     background-color: #131218;
     display: flex;
     align-items: center;
@@ -8,7 +10,7 @@
 }
 
 .imgPortfolio {
-    width: 400px;
+    width: 100%;
     height: auto;
     /* background-color: #131218; */
 }
