--- a/src/stylesheet/Portfolio.css
+++ b/src/stylesheet/Portfolio.css
@@ -14,11 +14,12 @@ a {
 }
 
 .imgPortfolio {
-  box-shadow: 5px 5px 3px 1px #000000;
+  box-shadow: 4px 4px 2px 1px #000000;
   border-radius: 10px;
   width: 100%;
   height: auto;
   margin-bottom: 10px;
+  /* background-color: #131218; */
 }
 
 .namePortfolio {
@@ -28,8 +29,6 @@ a {
 }
 
 .imgPortfolio {
-  width: 400px;
-  height: auto;
   filter: brightness(1, 5);
 }
 
