--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
-    background-color: #17161c;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #17161c;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 @media (max-width: 414px) {
-    body {
-        display: none;
-    }
+  body {
+    display: none;
+  }
 }
