--- a/src/stylesheet/Page.css
+++ b/src/stylesheet/Page.css
@@ -125,3 +125,39 @@ h1 {
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
   transform: translateY(-7px);
 }
+
+@media (max-width: 414px) {
+  .containerPortfolio {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 15px 40px;
+    grid-template-areas:
+      '.'
+      '.'
+      '.';
+    justify-items: center;
+  }
+  .containerSeparator {
+    width: 100%;
+    margin: 10px;
+  }
+  .containerCards {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 15px 40px;
+    grid-template-areas:
+      '.'
+      '.'
+      '.'
+      '.'
+      '.'
+      '.';
+    justify-items: center;
+  }
+  .contact {
+    width: 100%;
+    font-size: 10px;
+  }
+}
