--- a/src/stylesheet/Presentation.css
+++ b/src/stylesheet/Presentation.css
@@ -1,42 +1,64 @@
 .contenedor-testimonio {
-    width: 1000px;
-    height: 330px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 3px 3px 15px 6px black;
-    color: #f4f5f6;
-    position: absolute;
+  width: 1000px;
+  height: 330px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 3px 3px 15px 6px black;
+  color: #f4f5f6;
+  position: absolute;
 }
 
 .imagen-testimonio {
-    /* font-size: 1.4em; */
-    height: 100%;
-    width: auto;
+  /* font-size: 1.4em; */
+  height: 100%;
+  width: auto;
 }
 
 .contenedor-texto {
-    width: 100%;
-    font-size: 18px;
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-        sans-serif;
-    font-weight: 400;
-    line-height: 1.5rem;
+  width: 100%;
+  font-size: 18px;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  line-height: 1.5rem;
 }
 
 .nombre-testimonio {
-    font-size: 2rem;
-    margin-bottom: 30px;
+  font-size: 2rem;
+  margin-bottom: 30px;
 }
 
 .cargo-testimonio {
-    font-size: 1.3rem;
-    margin-bottom: 30px;
+  font-size: 1.3rem;
+  margin-bottom: 30px;
 }
 
 .texto-testimonio {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+@media (max-width: 414px) {
+  .contenedor-testimonio {
+    width: 300px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 3px 3px 15px 6px black;
+    color: #f4f5f6;
+    position: absolute;
+  }
+  .nombre-testimonio {
+    font-size: 15px;
+    margin-bottom: 30px;
+  }
+
+  .texto-testimonio {
+    font-size: 10px;
     text-align: center;
+  }
 }
