--- a/src/stylesheet/Presentation.css
+++ b/src/stylesheet/Presentation.css
@@ -1,5 +1,6 @@
 .contenedor-testimonio {
-  width: 1000px;
+  max-width: 1000px;
+  width: 100%;
   height: 330px;
   display: flex;
   align-items: center;
@@ -28,6 +29,11 @@
 .nombre-testimonio {
   font-size: 2rem;
   margin-bottom: 30px;
+  padding: 5px;
+}
+
+.transparent {
+  background-color: transparent;
 }
 
 .cargo-testimonio {
